# exorous_code

./: .env  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.ai-agent/: config.toml
.github/workflows/: publish.yml
agent/: session.py
client/: llm_client.py
config/: loader.py
context/: compaction.py  loop_detector.py  manager.py
hooks/: hook_system.py
prompts/: system.py
safety/: approval.py
src/exorous/: main.py
src/exorous.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/exorous/agent/: agent.py  events.py  persistence.py  session.py
src/exorous/client/: llm_client.py
src/exorous/config/: config.py  loader.py
src/exorous/context/: compaction.py  graph.py  indexer.py  knowledge.py  manager.py  vector_db.py
src/exorous/hooks/: hook_system.py
src/exorous/prompts/: system.py
src/exorous/safety/: approval.py
src/exorous/scripts/: test_tool.py
src/exorous/tools/: base.py  discovery.py  registry.py  subagents.py
src/exorous/tools/builtin/: __init__.py  code_search.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
src/exorous/tools/mcp/: client.py  mcp_manager.py  mcp_tool.py
src/exorous/ui/: tui.py
src/exorous/utils/: errors.py
tools/: registry.py  subagents.py
tools/builtin/: edit_file.py  memory.py  read_file.py  shell.py  todo.py  web_search.py  write_file.py
tools/mcp/: client.py
ui/: tui.py
utils/: paths.py
