[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exorous"
version = "0.1.0"
description = "A professional AI coding agent that can execute tasks using tools and manage complex development workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Riazul Islam"},
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "tomli>=2.0.0",
    "platformdirs>=4.0.0",
    "httpx>=0.25.0",
    "duckduckgo-search>=6.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    "fastmcp>=2.0.0",
    "eval_type_backport",
    "python-dotenv>=1.0.0",
]

[project.scripts]
exorous = "exorous.main:main"

[tool.setuptools.packages.find]
where = ["src"]
